# ecap-exif

./: .gitignore  CREDITS  Makefile.am  README  README.md  acinclude.m4  configure.in
src/: Adapter.cpp  Config.cpp  Config.hpp  ContentFileIO.cpp  ContentFileIO.hpp  ContentIO.hpp  ContentIOFactory.cpp  ContentIOFactory.hpp  ContentMemoryIO.cpp  ContentMemoryIO.hpp  ExivMetadataFilter.cpp  ExivMetadataFilter.hpp  Log.cpp  Log.hpp  Makefile.am  MemoryAreaDetails.cpp  MemoryAreaDetails.hpp  MetadataFilter.cpp  MetadataFilter.hpp  MetadataFilterFactory.cpp  MetadataFilterFactory.hpp  Mp3MetadataFilter.cpp  Mp3MetadataFilter.hpp  Mp4MetadataFilter.cpp  Mp4MetadataFilter.hpp  MultipartContentIO.cpp  MultipartContentIO.hpp  OdfMetadataFilter.cpp  OdfMetadataFilter.hpp  OggVorbisMetadataFilter.cpp  OggVorbisMetadataFilter.hpp  OpenXmlMetadataFilter.cpp  OpenXmlMetadataFilter.hpp  PdfMetadataFilter.cpp  PdfMetadataFilter.hpp  RuntimeMetadataFilter.cpp  RuntimeMetadataFilter.hpp  Service.cpp  Service.hpp  Xaction.cpp  (+2 more)
